--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,7 @@ body{
 }
 
 .cabecalho{
-    height: 200px;
+    height: 150px;
     width: 100%;
     background-image: url("../img/FundoCABE.jpeg");
 }
@@ -111,7 +111,7 @@ button{
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
-    background-color:#8dd2eb
+    background-color: rgb(202, 245, 159);
 }
 .menu button{
     background:#8dd2eb;
@@ -266,7 +266,7 @@ button{
 /* Add a black background color to the top navigation bar */
 .topnav {
     overflow: hidden;
-    margin: -150px 0px 30px 300px; 
+    margin: -100px 0px 30px 300px; 
 
 }
 /* Style the links inside the navigation bar */
@@ -294,84 +294,73 @@ button{
     color: white;
 }
 
+
+#mainsigin{
+    background-color: #8dd2eb;
+    width: 600px;
+    height: 680px;
+    border-radius: 5px;
+    margin-left: 33%;
+    margin-top: 40px;
+    color: black;
+    text-align: center;
+}
+#login_dv1{
+    width: 400px;
+    margin-left: 100px;
+    padding-top: 40px;
+    
+}
+#signup-form{
+    text-align: left;
+    float: left;
+    padding: 20px 60px 60px 60px;
+}
+#signup-form button{
+    width: 480px;
+    height: 70px;
+    border-radius: 5px;
+    border: 0px;
+    color: black;
+    background-color: #e9e9e9;
+}
+#opc02{
+    margin-top: -15px;
+}
+
+
+.form-label-group{
+    padding: 0px 0px 20px 0px;
+}
+.form-control{
+    height: 40px;
+    width: 470px;
+}
+.navbar{
+    vertical-align: middle;
+    display: inline-block;
+    margin: 30px 20px 0px 20px;
+}
+.goleft{
+    float: left;
+}
+.fix{
+    clear: both;
+}
+
+a:link, a:visited {
+	text-decoration: none
+	}
+a:hover {
+	text-decoration: underline; 
+    color: #f00    
+	}
+a:active {
+	text-decoration: none
+    }
+    
 section{
     width: 100%; 
     background-color: #f5f5f5; 
     border-top: solid 2px #9397b3;
 }
-#servicos{
-    width: 1000px;
-    margin: auto;
-    margin-top: 30px;
-}
-#caixaTexto{
-    height: 50px;
-    text-align: center;
-}
-
-
-.modalDialog {
-    position: fixed;
-    font-family: Arial, Helvetica, sans-serif;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 99999;
-    opacity: 0;
-    pointer-events: none;
-  }
-  .modalDialog:target {
-    opacity: 1;
-    pointer-events: auto;
-  }
-  .modalDialog > div {
-    width: 1030px;
-    position: relative;
-    margin: 10% auto;
-    padding: 5px 20px 13px 20px;
-    border-radius: 10px;
-    background: #fff;
-    background: -moz-linear-gradient(#fff, #999);
-    background: -webkit-linear-gradient(#fff, #999);
-    background: -o-linear-gradient(#fff, #999);
-  }
-  .close {
-    background: #606061;
-    color: #FFFFFF;
-    line-height: 25px;
-    position: absolute;
-    right: -12px;
-    text-align: center;
-    top: -10px;
-    width: 24px;
-    text-decoration: none;
-    font-weight: bold;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    border-radius: 12px;
-    -moz-box-shadow: 1px 1px 3px #000;
-    -webkit-box-shadow: 1px 1px 3px #000;
-    box-shadow: 1px 1px 3px #000;
-  }
-  .close:hover {
-    background: #00d9ff;
-  }
-
-
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 1020px;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
