--- a/css/contato.css
+++ b/css/contato.css
@@ -1,8 +1,27 @@
 body{
     margin: 0px;
-    width: 100%;    
+    width: 100%;  
+    height: 100%; 
+    background-color: #f5f5f5; 
     
 }
+.cabecalho img{
+    width: 160px;
+    height: 160px;
+    margin-left: 80px;
+    margin-top: 00px;
+}
+
+.cabecalho{
+    height: 150px;
+    width: 100%;
+    background-image: url("../img/FundoCABE.jpeg");
+}
+.cabecalho h1{
+    margin-left: 200px;
+
+}
+
 .servicos fieldset{
     float: left;
     width: 200px;
@@ -14,7 +33,7 @@ body{
 
 .formulario_contatos fieldset{
     border-radius: 10px;
-    margin-left: 200px;
+    margin: auto;
     background-color: rgb(240, 240, 240);
     
 }
@@ -41,21 +60,17 @@ body{
 }
 .formulario_contatos button:hover{
     background-color: rgba(116, 252, 116, 0.774);
-
-
 }
-
 .box {
     border-radius: 10px;
     margin-left: 410px;
-    margin-top: 25px;
-    
+    margin-top: 25px;    
 }
 .formulario_contatos img{
     width: 300px;
     height: 300px;
     position: absolute;
-    margin-left: 260px;  
+    margin-left: 660px;  
     margin-top: 40px;
 }
 .box input{
@@ -70,6 +85,66 @@ body{
     height: 100px;
     border-radius: 10px;    
 }
+#div_sec{
+    margin-top: 70px;
+}
 
+/***************************************************************************************/
+.navbar{
+    vertical-align: middle;
+    display: inline-block;
+    margin: 30px 30px 0px 20px;
+}
+.goleft{
+    float: left;
+}
+.notbolt{
+    font-weight: 400;
+}
+.italic{
+    font-style: italic; 
+}
+.textalign_right{
+    text-align: right;
+}
+.scroll{
+    overflow: auto;
+}
 
+/* Add a black background color to the top navigation bar */
+.topnav {
+    overflow: hidden;
+    margin: -100px 0px 30px 300px; 
+
+}
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 17px;
+    margin: 10px;
+    box-shadow: 2px 2px rgb(56, 58, 57);
+    border-radius: 5px;
+    background-color: rgb(240, 240, 240);
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: rgb(221, 221, 221);
+    color: black;
+}
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+    background-color: #2196F3;
+    color: white;
+}
+section{
+    height: 100%;
+    width: 100%; 
+    border-top: solid 2px #9397b3;
+    margin: auto;
+}
 
