--- a/css/fornecedor.css
+++ b/css/fornecedor.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
     width: 100%;  
     height: 100%; 
-    
+    background-color: #f5f5f5; 
 }
 .cabecalho img{
     width: 160px;
@@ -12,7 +12,7 @@ body{
 }
 
 .cabecalho{
-    height: 200px;
+    height: 150px;
     width: 100%;
     background-image: url("../img/FundoCABE.jpeg");
 }
@@ -98,7 +98,6 @@ body{
 
 
 .formulario_fornecedor fieldset{
-    margin-left: 200px;
     background-color: rgb(231, 231, 231);
     border: 1px #b6b6b6 solid;
 }
@@ -265,7 +264,7 @@ button{
 /* Add a black background color to the top navigation bar */
 .topnav {
     overflow: hidden;
-    margin: -150px 0px 30px 300px; 
+    margin: -100px 0px 30px 300px; 
 
 }
 /* Style the links inside the navigation bar */
@@ -292,4 +291,16 @@ button{
     background-color: #2196F3;
     color: white;
 }
-
+section{
+    width: 100%; 
+    background-color: #f5f5f5; 
+    border-top: solid 2px #9397b3;
+}
+#mainSec{
+    width: 715px;
+    height: 680px;
+    border-radius: 5px;
+    margin: auto;
+    color: black;
+    text-align: left;
+}
