--- a/css/login.css
+++ b/css/login.css
@@ -296,9 +296,10 @@ button{
 
 
 #mainsigin{
-    background-color: #8dd2eb;
+    background-color: #e9e9e9;
+    border:solid black 1px;
     width: 600px;
-    height: 680px;
+    height: 480px;
     border-radius: 5px;
     margin-left: 33%;
     margin-top: 40px;
@@ -322,8 +323,15 @@ button{
     border-radius: 5px;
     border: 0px;
     color: black;
-    background-color: #e9e9e9;
+    background-color: white;    
 }
+#signup-form button:hover{
+    background-color: #2196F3;
+    
+}
+
+
+
 #opc02{
     margin-top: -15px;
 }
