--- a/css/contato.css
+++ b/css/contato.css
@@ -34,8 +34,8 @@ body{
 .formulario_contatos fieldset{
     border-radius: 10px;
     margin: auto;
-    background-color: rgb(240, 240, 240);
-    
+    background-color: rgb(240, 240, 240);      
+    display: flex;
 }
 .menu_login button{
     background:#8dd2eb;
@@ -69,9 +69,9 @@ body{
 .formulario_contatos img{
     width: 300px;
     height: 300px;
-    position: absolute;
-    margin-left: 660px;  
-    margin-top: 40px;
+    float: left; 
+    margin-top: 10px;
+    margin-left: -370px;
 }
 .box input{
     border: 0 none;
@@ -86,6 +86,7 @@ body{
     border-radius: 10px;    
 }
 #div_sec{
+    width: 100%;
     margin-top: 70px;
 }
 
