--- a/css/paginaInicial.css
+++ b/css/paginaInicial.css
@@ -1,7 +1,7 @@
-body{
-    margin: 0px;
-    width: 100%;   
-    
+body{    
+    width: 100%;  
+    height: 100%; 
+    margin: 0px;    
 }
 .cabecalho img{
     width: 160px;
@@ -20,58 +20,6 @@ body{
 
 }
 
-  
-.inf img{
-    position: relative;
-    top: 40px;
-    left: 500px;        
- }
-.inf fieldset{
-    background-color: #8dd2eb;
-    margin-left: 370px;
-    margin-top: 50px;
-    width: 400px;
-    height: 200px;
-   
-}
-.quadros fieldset{
-    float: left;
-    width: 400px;
-    height: 200px;
-
-}
-.FIM {
-    margin-left: 250px;
-    text-align: justify;
-    font-size: 30px;
-}
-.FIM img{
-    margin-left: 25px;
-    width: 700px;
-    height: 400px;
-}
-.texto h3{
-    color: black ;
-    
-}
-.servicos fieldset{
-    float: left;
-    width: 200px;
-    height: 200px;
-    margin-top: 100px;
-
-}
-.login_rodape fieldset{
-    width: 400px;
-    height: 100px;
-    background-color: #5bacde;
-    margin-top: 1px;
-    margin-left: 370px;
-    border-radius: 150px;
-}
-.formulario_consumidor fieldset{
-    background-color: #8dd2eb;
-}
 
 .f1{
     margin-left: 150px;
@@ -94,10 +42,6 @@ body{
 }
 
 
-.formulario_fornecedor fieldset{
-    background-color: rgb(231, 231, 231);
-    border: 1px #b6b6b6 solid;
-}
 button{
     font-family: Cooper Black;
     font-size: 15px;
@@ -129,8 +73,7 @@ button{
 .inicial_inf img{
     margin-left: 400px;
 }
-.inicial_inf h2{
-    
+.inicial_inf h2{    
     color: rgb(18, 15, 194);
     font-size: 25px;
     text-align: justify;
@@ -197,37 +140,32 @@ button{
 #title_form{
     text-align: center;
 }
-#c_div_1{    
+#f_div_1{    
     width: 300px;
     height: 180px;
     float: left;
 }
-#c_div_2{
+#f_div_2{
     width: 300px;
     height: 180px;
     float: left;
     margin-left: 50px;
 }
-#c_div_3{    
+#f_div_3{    
     width: 400px;
     height: 180px;
     float: left;
-    margin-top: 160px;
+    margin-top: 200px;
 }
-#c_div_4{
+#f_div_4{
     width: 300px;
     height: 180px;
     float: right;
-    margin-top: 160px;
+    margin-top: 200px;
 }
-#c_div_5{    
+#f_div_5{    
     float: right;
-    margin-top: 40px;
-}
-#c_div_6 button{    
-    float: right;
-    margin-top: 80px;
-    margin-left: 50px;
+    margin-top: 10px;
 }
 #box_check{
     width: 140px;
@@ -293,4 +231,31 @@ button{
     background-color: #2196F3;
     color: white;
 }
+
+/***************************************************************************************/
+#divMain{  
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+    width: 1200px;
+    height: 400px;
+}
+#img_sec{
+    margin: auto;
+    display: flex;    
+    width: 1200px;
+    height: 400px;  
+}
+#img_sec img{
+    margin: auto;
+    width:  700px;
+    border-radius: 10px;
+}
+#divText{
+    margin: auto;    
+    width: 800px;
+    height: 400px;
+    text-align: justify;
+}
+
 
